--- a/RummageCoreTest/RummageCoreTest.csproj
+++ b/RummageCoreTest/RummageCoreTest.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -52,12 +52,15 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MatchTest.cs" />
-    <Compile Include="SearchRequestFilesystemTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RummageCore\RummageCore.csproj">
       <Project>{74E094C1-10D1-4813-A4AE-395C6685066B}</Project>
       <Name>RummageCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RummageFilesystem\RummageFilesystem.csproj">
+      <Project>{D7F5E3B1-6E78-4EF9-BC2A-D0080F0EC78D}</Project>
+      <Name>RummageFilesystem</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
