--- a/RummageFilesystem/RummageFilesystem.csproj
+++ b/RummageFilesystem/RummageFilesystem.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{74E094C1-10D1-4813-A4AE-395C6685066B}</ProjectGuid>
+    <ProjectGuid>{D7F5E3B1-6E78-4EF9-BC2A-D0080F0EC78D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RummageCore</RootNamespace>
-    <AssemblyName>RummageCore</AssemblyName>
+    <RootNamespace>RummageFilesystem</RootNamespace>
+    <AssemblyName>RummageFilesystem</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,12 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMatch.cs" />
-    <Compile Include="ISearch.cs" />
-    <Compile Include="ISearchRequest.cs" />
-    <Compile Include="Match.cs" />
-    <Compile Include="Search.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchRequestFilesystem.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RummageCore\RummageCore.csproj">
+      <Project>{74E094C1-10D1-4813-A4AE-395C6685066B}</Project>
+      <Name>RummageCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
