--- a/RummageFilesystemTest/RummageFilesystemTest.csproj
+++ b/RummageFilesystemTest/RummageFilesystemTest.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{74E094C1-10D1-4813-A4AE-395C6685066B}</ProjectGuid>
+    <ProjectGuid>{D8766E90-769D-4E63-AD33-E0A2456CECBF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RummageCore</RootNamespace>
-    <AssemblyName>RummageCore</AssemblyName>
+    <RootNamespace>RummageFilesystemTest</RootNamespace>
+    <AssemblyName>RummageFilesystemTest</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,12 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMatch.cs" />
-    <Compile Include="ISearch.cs" />
-    <Compile Include="ISearchRequest.cs" />
-    <Compile Include="Match.cs" />
-    <Compile Include="Search.cs" />
+    <Compile Include="SearchRequestFilesystemTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RummageCore\RummageCore.csproj">
+      <Project>{74E094C1-10D1-4813-A4AE-395C6685066B}</Project>
+      <Name>RummageCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RummageFilesystem\RummageFilesystem.csproj">
+      <Project>{D7F5E3B1-6E78-4EF9-BC2A-D0080F0EC78D}</Project>
+      <Name>RummageFilesystem</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
