--- a/RummageFilesystem/RummageFilesystem.csproj
+++ b/RummageFilesystem/RummageFilesystem.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchFilesystem.cs" />
     <Compile Include="SearchRequestFilesystem.cs" />
   </ItemGroup>
   <ItemGroup>
