--- a/RummageFilesystemTest/RummageFilesystemTest.csproj
+++ b/RummageFilesystemTest/RummageFilesystemTest.csproj
@@ -31,9 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\nunit.framework.dll</HintPath>
-    </Reference>
+     <Reference Include="nunit.framework">
+       <HintPath>..\SharedLibs\nunit.framework.dll</HintPath>
+     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
