--- a/RummageFilesystem/RummageFilesystem.csproj
+++ b/RummageFilesystem/RummageFilesystem.csproj
@@ -31,21 +31,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-     <Reference Include="log4net">
-       <HintPath>..\SharedLibs\log4net.dll</HintPath>
-     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\SharedLibs\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate, Version=3.0.0.1001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\SearchRequestFilesystemRepository.cs" />
+    <Compile Include="Domain\SearchFilesystem.cs" />
+    <Compile Include="Domain\SearchRequestFilesystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchFilesystem.cs" />
-    <Compile Include="SearchRequestFilesystem.cs" />
+    <Compile Include="Repositories\ISearchRequestRepository.cs" />
+    <Compile Include="Repositories\NHibernateHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RummageCore\RummageCore.csproj">
@@ -53,7 +56,18 @@
       <Name>RummageCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mappings\SearchRequestFilesystem.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="hibernate.cfg.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(ProjectDir)..\SharedLibs\*.* $(ProjectDir)$(OutDir)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
