Start implementing GUI client.

--- a/Rummage/Rummage.csproj
+++ b/Rummage/Rummage.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>Rummage</RootNamespace>
     <AssemblyName>Rummage</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -86,11 +87,22 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RummageCore\RummageCore.csproj">
+      <Project>{74E094C1-10D1-4813-A4AE-395C6685066B}</Project>
+      <Name>RummageCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RummageFilesystem\RummageFilesystem.csproj">
+      <Project>{D7F5E3B1-6E78-4EF9-BC2A-D0080F0EC78D}</Project>
+      <Name>RummageFilesystem</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
