--- a/Rummage/Rummage.csproj
+++ b/Rummage/Rummage.csproj
@@ -112,6 +112,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Rummage.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RummageCore\RummageCore.csproj">
@@ -121,6 +124,10 @@
     <ProjectReference Include="..\RummageFilesystem\RummageFilesystem.csproj">
       <Project>{D7F5E3B1-6E78-4EF9-BC2A-D0080F0EC78D}</Project>
       <Name>RummageFilesystem</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RummageIO\RummageIO.csproj">
+      <Project>{34E9640A-CBFC-432D-96A2-C540333F1C25}</Project>
+      <Name>RummageIO</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
