--- a/RummageCore/RummageCore.csproj
+++ b/RummageCore/RummageCore.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="IDatabaseHandler.cs" />
     <Compile Include="IMatch.cs" />
     <Compile Include="ISearch.cs" />
     <Compile Include="ISearchRequest.cs" />
