--- a/RummageIO/RummageIO.csproj
+++ b/RummageIO/RummageIO.csproj
@@ -47,6 +47,12 @@
     <Compile Include="DatabaseHandlerFirebird.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RummageCore\RummageCore.csproj">
+      <Project>{74E094C1-10D1-4813-A4AE-395C6685066B}</Project>
+      <Name>RummageCore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
