--- a/RummageIOTest/RummageIOTest.csproj
+++ b/RummageIOTest/RummageIOTest.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RummageCore\RummageCore.csproj">
+      <Project>{74E094C1-10D1-4813-A4AE-395C6685066B}</Project>
+      <Name>RummageCore</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RummageIO\RummageIO.csproj">
       <Project>{34E9640A-CBFC-432D-96A2-C540333F1C25}</Project>
       <Name>RummageIO</Name>
