--- a/RummageIOTest/RummageIOTest.csproj
+++ b/RummageIOTest/RummageIOTest.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.0.315.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\SharedLibs\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,6 +52,10 @@
     <ProjectReference Include="..\RummageCore\RummageCore.csproj">
       <Project>{74E094C1-10D1-4813-A4AE-395C6685066B}</Project>
       <Name>RummageCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RummageFilesystem\RummageFilesystem.csproj">
+      <Project>{D7F5E3B1-6E78-4EF9-BC2A-D0080F0EC78D}</Project>
+      <Name>RummageFilesystem</Name>
     </ProjectReference>
     <ProjectReference Include="..\RummageIO\RummageIO.csproj">
       <Project>{34E9640A-CBFC-432D-96A2-C540333F1C25}</Project>
