--- a/RummageCoreTest/RummageCoreTest.csproj
+++ b/RummageCoreTest/RummageCoreTest.csproj
@@ -34,9 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-     <Reference Include="nunit.framework">
-       <HintPath>..\SharedLibs\nunit.framework.dll</HintPath>
-     </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\SharedLibs\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -54,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MatchTest.cs" />
+    <Compile Include="SettingsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RummageCore\RummageCore.csproj">
